# python-template

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
docs/: pull_request_guidelines.md  pull_request_template.md
src/mypackage/: __init__.py
tests/: test_mypackage.py
