[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = ""
version = "0.0.0"
description = ""
requires-python = "~=3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "Jon Deans", email = "jrdeans@gmail.com"},
]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.3.2"
]

[project.urls]
repository = ""

[tool.pytest.ini_options]
addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
python_files =[
    "test_*.py",
    "check_*.py",
    "example_*.py"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
