[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = ""
version = "0.0.0"
description = ""
requires-python = "~=3.11"
readme = {file = "README.md", content-type="text/markdown"}
license = {file = "LICENSE.md"}
authors = [
    {name = "Jon Deans", email = "jrdeans@gmail.com"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.3.2"
]

[project.urls]
repository = ""

[tool.pytest.ini_options]
addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
testpaths = ["tests"]
python_files =[
    "test_*.py",
    "check_*.py",
    "example_*.py"
]

[tool.ruff]
line-length = 100
