[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = ""
version = "0.0.0"
description = ""
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
authors = [
    {name = "Jon Deans", email = "jrdeans@gmail.com"},
]
dependencies = []

# CLI Entry Point
#[project.scripts]

[project.optional-dependencies]
dev = [
    "mypy==1.10.0",
    "pytest==8.2.2",
    "ruff==0.4.9"
]

[project.urls]
repository = ""

[tool.pytest.ini_options]
addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
testpaths = ["tests"]
python_files =[
    "test_*.py",
    "check_*.py",
    "example_*.py"
]

[tool.ruff]
line-length = 100
